[gd_scene load_steps=3 format=3 uid="uid://chtyreukl7dub"]

[ext_resource type="Texture2D" uid="uid://dq7aqltyt2wiu" path="res://assets/interface/missoes_diarias.png" id="1_2a512"]
[ext_resource type="Script" uid="uid://fxpr8l33u02c" path="res://scripts/interface/missoes_diarias.gd" id="1_8yste"]

[node name="Scene" type="Node2D"]
script = ExtResource("1_8yste")

[node name="Background" type="TextureRect" parent="."]
offset_right = 972.0
offset_bottom = 2127.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_2a512")

[node name="missao1" type="Button" parent="."]
offset_left = 12.0
offset_top = 161.0
offset_right = 377.0
offset_bottom = 324.0
theme_override_font_sizes/font_size = 30
text = "FÁCIL"
flat = true

[node name="missao2" type="Button" parent="."]
offset_left = 11.0
offset_top = 345.0
offset_right = 376.0
offset_bottom = 508.0
theme_override_font_sizes/font_size = 30
text = "INTERMEDIÁRIO"
flat = true

[node name="missao3" type="Button" parent="."]
offset_left = 11.0
offset_top = 521.0
offset_right = 376.0
offset_bottom = 684.0
theme_override_font_sizes/font_size = 30
text = "DIFÍCIL"
flat = true

[node name="Voltar" type="Button" parent="."]
offset_left = 9.0
offset_top = 765.0
offset_right = 89.0
offset_bottom = 836.0
flat = true

[connection signal="button_up" from="missao1" to="." method="_on_missao_1_button_up"]
[connection signal="button_up" from="missao2" to="." method="_on_missao_2_button_up"]
[connection signal="button_up" from="missao3" to="." method="_on_missao_3_button_up"]
[connection signal="button_up" from="Voltar" to="." method="_on_voltar_button_up"]
